--- a/my_django_app/HomePage/templates/HomePage/index.html
+++ b/my_django_app/HomePage/templates/HomePage/index.html
@@ -36,7 +36,12 @@
   <h2>
   We are still trying to figure out how to work things, out we are a bit behind but we will make sure we are going to present something pleasing or acceptable.
   <h2>
-
+  <center>
+  <img id = "imgShow" />
+  <img src="https://source.unsplash.com/random/200x200?sig=1" />
+  <img src="https://source.unsplash.com/random/200x200?sig=2" />
+  <img src="https://source.unsplash.com/random/200x200?sig=3" />
+  </center>
   </body>
 
 </html>
