--- a/my_django_app/HomePage/templates/HomePage/index.html
+++ b/my_django_app/HomePage/templates/HomePage/index.html
@@ -20,10 +20,10 @@
   </h1>
 
   <div class = "menu">
-  <a href="HomePage/index.html">Home</a>
+  <a href="">Home</a>
   <br></br>
 
-  <a href="loginPage/login.html">Login</a>
+  <a href="../login/">Login</a>
   <br></br>
 
   <input type="text" placeholder="Find">
