--- a/my_django_app/HomePage/templates/HomePage/index.html
+++ b/my_django_app/HomePage/templates/HomePage/index.html
@@ -34,7 +34,7 @@
 
 </center>
   <h2>
-  We are still trying to figure out how to work things, out we are a bit behind but we will make sure we are going to present something pleasing or acceptable.
+  A bit behind, But we promise something acceptable by the submission date
   <h2>
   <center>
   <img id = "imgShow" />
