--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-
+    <form>  
+        <div>   
+            <label>Username : </label>   
+            <input type="text" placeholder="Enter Username" name="username" required>  
+            <label>Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password" required>  
+            <button type="submit">Login</button>    
+            <button type="button" class="home"> home</button>   
+            Forgot <a href="#"> password? </a>   
+        </div>   
+    </form>   
 </body>
 </html>
