Made and connected the list page.

--- a/home/static/home/index.css
+++ b/home/static/home/index.css
@@ -1,14 +1,14 @@
 body
 {
-     background-color: black
+     background-color: black;
 }
 h2
 {
-    color: purple
+    color: purple;
 }
 h1
 {
- color: blue
+ color: blue;
 }
 .menu
 {
