--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Main</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'home/index.css' %}">
-      <script src="{% static 'home/script.js' %}"></script>
 
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Main</title>
+  {% load static %}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'home/index.css' %}">
+  <script src="{% static 'home/script.js' %}"></script>
 
-  <body>
+</head>
+
+<body>
   <center>
 
 
-  <h1>
-    Welcome to the Wishlist
-  </h1>
+    <h1>
+      Welcome to the Wishlist
+    </h1>
 
-  <div class = "menu">
-  <a href="">Home</a>
-  <br></br>
+    <div class="menu">
+      <a href="">Home</a>
+      <br></br>
 
-  <a href="../login/">Login</a>
-  <br></br>
+      <a href="../login/">Login</a>
+      <br></br>
 
-  <input type="text" placeholder="Find">
+      <input type="text" placeholder="Find">
 
-  <button type="submit"><i class="fa fa-search"></i></button>
-  </div>
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </div>
 
 
-</center>
-  <h2>
-  We are still trying to figure out how to work things, out we are a bit behind but we will make sure we are going to present something pleasing or acceptable.
-  <h2>
-  <center>
-  <img id = "imgShow" />
-  <img src="https://source.unsplash.com/random/200x200?sig=1" />
-  <img src="https://source.unsplash.com/random/200x200?sig=2" />
-  <img src="https://source.unsplash.com/random/200x200?sig=3" />
   </center>
-  </body>
+  <h2>
+    We are still trying to figure out how to work things, out we are a bit behind but we will make sure we are going to
+    present something pleasing or acceptable.
+    <h2>
+      <center>
+        <img id="imgShow" />
+        <img src="https://source.unsplash.com/random/200x200?sig=1" />
+        <img src="https://source.unsplash.com/random/200x200?sig=2" />
+        <img src="https://source.unsplash.com/random/200x200?sig=3" />
+      </center>
+</body>
 
 </html>
