--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -9,19 +9,26 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{% static 'home/index.css' %}">
-  <script src="{% static 'home/script.js' %}"></script>
-
+  <link rel="stylesheet" type="text/css" href="{% static 'home/styles/index.css' %}">
 </head>
 
 <body>
 
   <header>
-    <h1>
-      Wishlist
-    </h1>
+    Wishlist
   </header>
-
+  <div class="d-flex">
+    <div>
+      <img
+        src="{% static 'home/images/illustration.svg' %}"
+        alt="Wishlist Image">
+    </div>
+    <div class='left-align'>
+      <a href='../newuser/'>Sign Up</a>
+      <br>
+      <a href='../login/'>Login</a>
+    </div>
+  </div>
 </body>
 
 </html>
