Replace illustration.svg with png version

--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -20,7 +20,7 @@
   <div class="d-flex">
     <div>
       <img
-        src="{% static 'home/images/illustration.svg' %}"
+        src="{% static 'home/images/illustration.png' %}"
         alt="Wishlist Image">
     </div>
     <div class='left-align'>
