--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -15,33 +15,18 @@
   <center>
 
 
-  <h1>
+   <h1>
     Welcome to the Wishlist
   </h1>
 
-  <div class = "menu">
-  <a href="">Home</a>
-  <br></br>
+  <div class = "topnav">
+  <a class = "signup" href="">Create Account</a>
 
-  <a href="../login/">Login</a>
-  <br></br>
+  <a class = "log" href="../login/">Login</a>
 
-  <input type="text" placeholder="Find">
-
-  <button type="submit"><i class="fa fa-search"></i></button>
   </div>
 
 
-</center>
-  <h2>
-  We are still trying to figure out how to work things, out we are a bit behind but we will make sure we are going to present something pleasing or acceptable.
-  <h2>
-  <center>
-  <img id = "imgShow" />
-  <img src="https://source.unsplash.com/random/200x200?sig=1" />
-  <img src="https://source.unsplash.com/random/200x200?sig=2" />
-  <img src="https://source.unsplash.com/random/200x200?sig=3" />
-  </center>
   </body>
 
 </html>
