--- a/list/templates/list/list.html
+++ b/list/templates/list/list.html
@@ -16,7 +16,7 @@
  <div class = "topnav">
   <a class = "signup" href="">Edit Account</a>
 
-  <a class = "log" href="">Edit Item Page</a>
+  <a class = "log" href="../editItem/">Edit Item Page</a>
 
   </div>
   <a href = "../login/"> back </a>
