Made tweaks to homepage

--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -13,21 +13,12 @@
 </head>
 
 <body>
-
   <header>
     Wishlist
   </header>
-  <div class="d-flex">
-    <div>
-      <img
-        src="{% static 'home/images/illustration.png' %}"
-        alt="Wishlist Image">
-    </div>
-    <div class='left-align'>
-      <a href='../newuser/'>Sign Up</a>
-      <br>
-      <a href='../login/'>Login</a>
-    </div>
+  <div class="d-flex" id="sign_log">
+      <a id="sign_up" href='../newuser/'>Sign Up</a>
+      <a id="login" href='../login/'>Login</a>
   </div>
 </body>
 
