--- a/assets/home/styles/index.css
+++ b/assets/home/styles/index.css
@@ -10,6 +10,8 @@ header {
   padding-right: 250px;
   padding-bottom: 100px;
   font-size: 8rem;
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 
 a {
@@ -23,6 +25,23 @@ a {
   color: black;
   margin: 50px;
   appearance: button;
+  color: white;
+}
+
+#sign_log {
+  background-image: url("/static/home/images/illustration.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#login {
+  margin-left: 80px;
+  margin-bottom: 250px;
+}
+
+#sign_up {
+  margin-top: 250px;
+  margin-right: 80px;
 }
 
 img {
