--- a/Templates/login.html
+++ b/Templates/login.html
@@ -14,17 +14,22 @@
 </head>
 
 <body>
-    <h1> Login</h1>
-    <form method='get'>
-        <div>
-            <label>Username : </label>
-            <input type="text" placeholder="Enter Username" name="username" required> <br>
-            <label>Password : </label>
-            <input type="password" placeholder="Enter Password" name="password" required> <br><br>
-            <button type="submit">Login</button> <br><br><br>
-            <button type="button" class="home"> home</button> <br>
+    <header>
+        <h1> Login</h1>
+    </header>
+    <form method='get' class="card">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" placeholder="Enter Username" id="username" required>
         </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" placeholder="Enter Password" id="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button> <br><br><br>
     </form>
+    <br>
+    <a href="../home">Go back</a>
 </body>
 
 </html>
