--- a/Templates/login.html
+++ b/Templates/login.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <h1> Login</h1>
+        <h1>Login</h1>
     </header>
-    <form method='get' class="card">
+    <form action="items" method='get' class="card">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" placeholder="Enter Username" id="username" required>
