everything is connected.
all we need left is making the database work with the site

--- a/createUser/templates/createUser/createUser.html
+++ b/createUser/templates/createUser/createUser.html
@@ -1,1 +1,19 @@
-This is the create User Page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>editItem </title>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'editAccount/acc.css' %}">
+    <script src="{% static 'edit/script.js' %}"></script>
+</head>
+<body>
+<center>
+<h1>Account Creation</h1>
+</center>
+<center>
+ <a href = "../home/"> back </a>
+</center>
+</body
