--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -20,7 +20,7 @@
   </h1>
 
   <div class = "topnav">
-  <a class = "signup" href="">Create Account</a>
+  <a class = "signup" href="../createUser/">Create Account</a>
 
   <a class = "log" href="../login/">Login</a>
 
