--- a/list/templates/list/list.html
+++ b/list/templates/list/list.html
@@ -14,7 +14,7 @@
 
 <h1>Tell us your desires</h1>
  <div class = "topnav">
-  <a class = "signup" href="">Edit Account</a>
+  <a class = "signup" href="../editAccount">Edit Account</a>
 
   <a class = "log" href="../editItem/">Edit Item Page</a>
 
