--- a/Templates/list.html
+++ b/Templates/list.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Wishlist </title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'list/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'list/styles/style.css' %}">
 </head>
 
 <body>
     <header>
         <h1>{{username}}'s List</h1>
     </header>
-    
+
     {% for item in items %}
-        {{item.image}}
-        <br>
-        {{item.link}}
-        <br>
-        {{item.website}}
-        <br>
-        {{item.name}}
+    <div class="card d-flex">
+        {% if item.image == 'No Image' %}
+        <div>
+            No image added
+        </div>
+        {% else %}
+        <img src='{{item.image}}' alt="{{item.name}} Image">
+        {% endif %}
+        <div>
+            {{item.name}}<br>
+            {{item.link}} <br>
+            {{item.website}}
+        </div>
+    </div>
     {% endfor %}
 </body>
 
