--- a/Templates/list.html
+++ b/Templates/list.html
@@ -17,21 +17,31 @@
     </header>
 
     {% for item in items %}
-    <div class="card d-flex">
+    <div class="cards">
         {% if item.image == 'No Image' %}
-        <div>
+        <div class='item_image'>
             No image added
         </div>
         {% else %}
-        <img src='{{item.image}}' alt="{{item.name}} Image">
+        <div class='item_image'>
+            <img src='{{item.image}}' alt="{{item.name}} Image" width="150px">
+        </div>
         {% endif %}
-        <div>
-            {{item.name}}<br>
-            {{item.link}} <br>
-            {{item.website}}
+        <div class='item_info'>
+            <span id="item_name">{{item.name}}</span>
+            <br>
+            {% if item.link == 'No Link' %}
+            <span id="item_link">No Link</span>
+            {% else %}
+            <a href={{item.link}} id="item_link">{{item.link}}</a>
+            {% endif %}
+            <br>
+            <span id="item_website">{{item.website}}</span>
         </div>
     </div>
     {% endfor %}
+
+    <a href="../newitem">
 </body>
 
 </html>
