New item button added
New item button at the bottom right corner which stays at the same position

--- a/Templates/list.html
+++ b/Templates/list.html
@@ -42,6 +42,8 @@
     {% endfor %}
 
     <a href="../newitem">
+        <img id="add_item" src='/static/list/images/newitem.png' alt='Add Item'>
+    </a>
 </body>
 
 </html>
