--- a/Templates/sign_up.html
+++ b/Templates/sign_up.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Sign Up </title>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'login/login.css' %}">
 </head>
 
 <body>
-    <form action="register" method="post">
+    <header>
+        <h1>Sign Up</h1>
+    </header>
+    <form action="../login/" method='post' class="card">
         {% csrf_token %}
-        <input type="text" name>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" placeholder="Enter Username" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" placeholder="Enter Password" id="password" name="password"
+                required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button> <br><br><br>
+        {% if loginFailed %}
+        <span class='text-danger'>Login Failed</span>
+        {% endif %}
     </form>
+    <br>
+    <a href="../newuser">Sign Up</a>
+    <br>
+    <a href="../home">Go back</a>
 </body>
 
 </html>
