--- a/Templates/list.html
+++ b/Templates/list.html
@@ -16,6 +16,12 @@
         <h1>{{username}}'s List</h1>
     </header>
 
+    {% if items == 'No items found in wishlist' %}
+    <div class="cards">
+        No items found in wishlist
+    </div>
+
+    {% else %}
     {% for item in items %}
     <div class="cards">
         {% if item.image == 'No Image' %}
@@ -40,6 +46,8 @@
         </div>
     </div>
     {% endfor %}
+
+    {% endif %}
 
     <a href="../newitem">
         <img id="add_item" src='/static/list/images/newitem.png' alt='Add Item'>
