--- a/Templates/login.html
+++ b/Templates/login.html
@@ -17,7 +17,7 @@
         <h1>Login</h1>
     </header>
     <form action="../login/" method='post' class="card">
-        <!-- {% csrf_token %} -->
+        {% csrf_token %}
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" placeholder="Enter Username" id="username" name="username" required>
