Added New Item Page and connected it to button.

--- a/Templates/list.html
+++ b/Templates/list.html
@@ -49,7 +49,7 @@
 
     {% endif %}
 
-    <a href="../newitem">
+    <a href="../newItem/">
         <img id="add_item" src='/static/list/images/newitem.png' alt='Add Item'>
     </a>
 </body>
