--- a/Templates/list.html
+++ b/Templates/list.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    </a>
     <header>
         <h1>{{username}}'s List</h1>
     </header>
@@ -42,7 +43,7 @@
             <a href={{item.link}} id="item_link">{{item.link}}</a>
             {% endif %}
             <br>
-            <span id="item_website">{{item.website}}</span>
+            <span id="item_description">{{item.description}}</span>
         </div>
     </div>
     {% endfor %}
