--- a/Templates/newItem.html
+++ b/Templates/newItem.html
@@ -11,31 +11,34 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'newItem/newItem.css' %}">
 </head>
-
 <body>
-    <header>
-        <h1>Add Item</h1>
-    </header>
-    <form action="../newItem/" method='post' class="card">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" placeholder="Enter Username" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" placeholder="Enter Password" id="password" name="password"
-                required>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button> <br><br><br>
-        {% if loginFailed %}
-        <span class='text-danger'>Login Failed</span>
-        {% endif %}
-    </form>
-    <br>
-    <a href="../newuser">Sign Up</a>
-    <br>
-    <a href="../home">Go back</a>
-</body>
+<center>
+<h1>What do you want to add</h1>
+</center>
+<center>
+<form method="POST" action="../newItem/">
+    <p> Name: </p>
+    <input type="text" name="itemName">
+     <br>
+      <br>
+     <p> Description: </p>
+      <br>
+      <textArea id = "Description" name = "Description">
+      </textArea> 
+      <br>
+       <br>
+    <p> Image: </p>
+     <input type="text" name="image">
+     <br>
+      <br>
+     <p> URL: </p>
+      <input type="text" name="URL">
+      <br>
+      <br>
+      <button type="submit">Add</button>
 
+</form>
+ <a href = "../list/"> back </a>
+</center>
+</body>
 </html>
