--- a/assets/home/styles/index.css
+++ b/assets/home/styles/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-  background-image: url("/static/home/images/wishlist_background.png");
+  background-image: url("/static/home/images/ret.jpg");
   background-repeat: no-repeat;
   padding-top: 250px;
   padding-left: 250px;
@@ -11,7 +11,9 @@ header {
   padding-bottom: 100px;
   font-size: 8rem;
   text-transform: uppercase;
-  font-weight: bolder;
+  font-weight: bold;
+  color: white;
+  font-style:italic;
 }
 
 a {
@@ -29,7 +31,7 @@ a {
 }
 
 #sign_log {
-  background-image: url("/static/home/images/illustration.png");
+  background-image: url("/static/home/images/ase.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
