--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -17,8 +17,10 @@
   </header>
  
   <div class="d-flex" id="sign_log">
+  <center>
       <a id="sign_up" href='../newuser/'>Sign Up</a>
       <a id="login" href='../login/'>Login</a>
+  </center>
   </div>
 
 </body>
