--- a/Templates/login.html
+++ b/Templates/login.html
@@ -27,7 +27,7 @@
             <input type="password" class="form-control" placeholder="Enter Password" id="password" name="password"
                 required>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button> <br><br><br>
+        <button type="submit" class="btn btn-dark">Login</button> <br><br><br>
         {% if loginFailed %}
         <span class='text-danger'>Login Failed</span>
         {% endif %}
