--- a/assets/login/login.css
+++ b/assets/login/login.css
@@ -1,12 +1,15 @@
 body {
+    background-image: url("/static/login/images/stuff.jpg");
     text-align: center;
     background-color: white;
 }
 
 header {
-    background-color: aliceblue;
+    background-color: LightSlateGrey;
     box-shadow: 2px 2px 15px;
     padding: 50px;
+    color: white;
+    font-style:italic;
 }
 
 form {
@@ -15,11 +18,14 @@ form {
     max-width: max-content;
     min-width: fit-content;
     margin: 100px auto;
+    background-color: LightSlateGrey;
+    color:white;
 }
 
 .card {
     box-shadow: 2px 2px 5px;
     border-radius: 1rem;
+    background-color: LightSlateGrey;
 }
 
 label {
@@ -27,10 +33,13 @@ label {
     text-align: left;
     padding: 20px;
     font-weight: bold;
+    background-color: LightSlateGrey;
 }
 
 button {
+    background-color: LightSlateGrey;
     margin-top: 50px;
+    color: black
 }
 
 a {
