--- a/Templates/sign_up.html
+++ b/Templates/sign_up.html
@@ -27,7 +27,7 @@
             <input type="password" class="form-control" placeholder="Enter Password" id="password" name="password"
                 required>
         </div>
-        <button type="submit" class="btn btn-primary">Sign Up</button> <br><br><br>
+        <button type="submit" class="btn btn-dark">Sign Up</button> <br><br><br>
         {% if class == 'text-success' %}
         <span class='text-success'>{{message}}</span>
         {% elif class == 'text-danger' %}
